--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Книжки</title>
   <link rel="stylesheet" href="css/index.css">
 </head>
+
+  <header>
+    <img id="author" src="images/index/author.png" alt="Здесь должен быть логотип">
+  </header>
+
 <body>
   <div> <!-- Див для изображений в левой части экрана-->
     <img id="man" src="images/index/man.png" alt="Здесь должен стоять мужик" >
