Работа с таблицей index.css

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,7 +8,79 @@
 </head>
   
 <body>
+  <div class="container">
+  <table class="table1">
+    <thead>
+      <tr>
+        <th id="th1">Произведение</th>
+        <th id="th2">а.л</th>
+        <th id="th3">Количество страниц (12пт)</th>
+        <th id="th4">дата последней редакции</th>
+        <th id="th5">Жанр</th>
+        <th id="th6">Файл для скачивания</th>
+      </tr>
+    </thead>
 
-  
+    <tbody>
+      <tr>
+        <td>Приставленный</td>
+        <td>45</td>
+        <td>646</td>
+        <td>17.11.25</td>
+        <td>Роман</td>
+        <td class="downloadcell"><img class="download" src="images/index/downloads.png" alt="Скачать"></td>
+      </tr>
+      <tr>
+        <td>Роса</td>
+        <td>7</td>
+        <td></td>
+        <td>28.03.2025</td>
+        <td>Малый роман</td>
+        <td class="downloadcell"><img class="download" src="images/index/downloads.png" alt="Скачать"></td>
+      </tr>
+    <tr>
+      <td>Проклятие Иеремии</td>
+      <td>0,5</td>
+      <td>8</td>
+      <td>27.03.2025</td>
+      <td>Первая глава романа "Зоб" </td>
+      <td class="downloadcell"><img class="download" src="images/index/downloads.png" alt="Скачать"></td>
+    </tr>
+    <tr>
+      <td>Второе неопалимое<br>прещение земель</td>
+      <td>1</td>
+      <td>14</td>
+      <td>22.07.24</td>
+      <td>Стихотворение 5</td>
+      <td class="downloadcell"><img class="download" src="images/index/downloads.png" alt="Скачать"></td>
+    </tr>
+    <tr>
+      <td>Неспящее</td>
+      <td>1</td>
+      <td>14</td>
+      <td>08.06.24</td>
+      <td>Стихотворение 3</td>
+      <td class="downloadcell"><img class="download" src="images/index/downloads.png" alt="Скачать"></td>
+    </tr>
+    <tr>
+      <td>Граничная веригой плоть<br> Надрывом кончила свой<br> кашель</td>
+      <td>14</td>
+      <td>194</td>
+      <td>25.06.23</td>
+      <td>Предложение</td>
+      <td class="downloadcell"><img class="download" src="images/index/downloads.png" alt="Скачать"></td>
+    </tr>
+    <tr>
+      <td>Московские<br>возвышенности мне<br>всегда были приятнее,<br>кажется,<br>соответствующих духу мысли моей равнин.<br>Саму Москву же из-за<br>памяти о грубостиотца я<br>не сильно любил и даже<br>боялся</td>
+      <td>0,3</td>
+      <td>4</td>
+      <td>03.05.2024</td>
+      <td></td>
+      <td class="downloadcell"><img class="download" src="images/index/downloads.png" alt="Скачать"></td>
+    </tr>
+  </table>
+</tbody>
+</div>
+<script src="js/index.js" defer></script>
 </body>
 </html>
