working with tables

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
 <body>
   <div class="container">
-  <table class="table1">
+  <table>
     <thead>
       <tr>
         <th id="th1">Произведение</th>
@@ -21,7 +21,7 @@
       </tr>
     </thead>
 
-    <tbody>
+    <tbody class="table1">
       <tr>
         <td>Приставленный</td>
         <td>45</td>
